fix: broadcast permission got error with duplicated insert statement
