# infrastructure/authorizator/casbin.go
@@ -2,13 +2,17 @@ package authorizator
 
 import (
 	"context"
+	"errors"
 	"fmt"
-	gocasbin "github.com/casbin/casbin/v2"
-	gormadapter "github.com/casbin/gorm-adapter/v3"
-	"github.com/scrapnode/kanthor/infrastructure/logging"
 	"net/url"
 	"strings"
 	"sync"
+
+	gocasbin "github.com/casbin/casbin/v2"
+	gormadapter "github.com/casbin/gorm-adapter/v3"
+	"github.com/jackc/pgerrcode"
+	"github.com/jackc/pgx/v5/pgconn"
+	"github.com/scrapnode/kanthor/infrastructure/logging"
 )
 
 func NewCasbin(conf *Config, logger logging.Logger) Authorizator {
@@ -83,7 +87,7 @@ func (authorizator *casbin) Refresh(ctx context.Context) error {
 }
 
 func (authorizator *casbin) Enforce(tenant, sub, obj, act string) (bool, error) {
-	ok, explains, err := authorizator.client.EnforceEx(tenant, sub, obj, act)
+	ok, explains, err := authorizator.client.EnforceEx(sub, tenant, obj, act)
 	if err != nil {
 		return false, err
 	}
@@ -101,13 +105,13 @@ func (authorizator *casbin) Grant(tenant, sub, role string, permissions []Permis
 	}
 	// the returning boolean value indicates that whether we can add the entity or not
 	// most time we could not add the new entity because it was exists already
-	if _, err := authorizator.client.AddPolicies(policies); err != nil {
+	if _, err := authorizator.client.AddPolicies(policies); err != nil && !authorizator.IsUniqueViolation(err) {
 		return err
 	}
 
 	// the returning boolean value indicates that whether we can add the entity or not
 	// most time we could not add the new entity because it was exists already
-	if _, err := authorizator.client.AddRoleForUserInDomain(sub, role, tenant); err != nil {
+	if _, err := authorizator.client.AddRoleForUserInDomain(sub, role, tenant); err != nil && !authorizator.IsUniqueViolation(err) {
 		return err
 	}
 
@@ -140,8 +144,17 @@ func (authorizator *casbin) UserPermissionsInTenant(tenant, sub string) ([]Permi
 
 	policies := authorizator.client.GetPermissionsForUserInDomain(sub, tenant)
 	for _, policy := range policies {
-		permissions = append(permissions, Permission{Object: policy[0], Action: policy[1]})
+		permissions = append(permissions, Permission{Role: policy[0], Object: policy[2], Action: policy[3]})
 	}
 
 	return permissions, nil
+}
+
+func (authorizator *casbin) IsUniqueViolation(err error) bool {
+	var pgErr *pgconn.PgError
+	if errors.As(err, &pgErr) {
+		return pgErr.Code == pgerrcode.UniqueViolation
+	}
+
+	return false
 }
